--- a/accounts/templates/accounts/profile.html
+++ b/accounts/templates/accounts/profile.html
@@ -46,6 +46,9 @@
                         <a href="{% url 'accounts:change_password' %}" class="btn btn-outline-secondary">
                             <i class="bi bi-lock"></i> Zmień hasło
                         </a>
+                        <a href="{% url 'accounts:delete_account' %}" class="btn btn-outline-danger mt-3">
+                            <i class="bi bi-trash"></i> Usuń konto
+                        </a>
                     </div>
                 </div>
             </div>
